Solve overflow problem padding-top

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -622,11 +622,6 @@ P {
         height: 10px;
     }
 
-    /*navbar*/
-    .make-navbar-bg {
-        padding-top: 30px;
-    }
-
 }
 
 /* Medium devices (tablets, 768px and up) */
